Fixed information area wrapping and added more padding

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .headder,
 .footer {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #1f2937;
   color: #e5e7eb;
   display: flex;
@@ -26,7 +27,8 @@ a {
 }
 
 .content {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .hero-content {
@@ -47,7 +49,6 @@ a {
   font-weight: bolder;
   color: #f9faf8;
 }
-
 
 .hero-sign-up-button {
   font-weight: bold;
@@ -72,6 +73,7 @@ a {
   align-items: center;
   justify-content: center;
   width: 150px;
+  padding: 20px;
 }
 
 .information-head {
@@ -81,12 +83,11 @@ a {
   display: flex;
   justify-content: space-evenly;
   padding: 25px;
-
 }
 
 .info-box {
   border: 2px solid blue;
-  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 10px;
   padding: 32px;
   width: 100px;
@@ -137,7 +138,6 @@ a {
   color: white;
   display: flex;
   flex-direction: column;
-
 }
 
 .call-text {
